application.yml modify

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,28 @@
+#------------------
+#Base Config
+#------------------
 server:
   servlet:
     register-default-servlet: true
     
 logging:  level:
     root: debug
+spring:
+  datasource:
+    postgresql:
+      driver-class-name: org.postgresql.Driver
+      url: jdbc:postgresql://127.0.0.1:25432/sampledb
+      username: postgres
+      password:   config:    activate:      on-profile:       local    use-legacy-processing: true 
+#------------------
+#Dev Config
+#------------------
+---
+logging:
+  level:
+    root: info
+spring: 
+  config:
+    activate:
+      on-profile:
+       dev
