--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,12 @@ dependencies {
 	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	
+	//Postgresql connect
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+	implementation 'org.springframework.data:spring-data-jdbc'
+	implementation 'org.postgresql:postgresql'
 }
 
 test {
