--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,10 +11,9 @@ logging:  level:
     root: debug
     
 #Local DataSources
-spring:  datasource:
-    postgresql:
+spring:  jpa:    generate-ddl: true    show-sql: true  datasource:    postgresql:
       driver-class-name: org.postgresql.Driver
-      url: jdbc:postgresql://127.0.0.1:25432/sampledb
+      url: jdbc:postgresql://127.0.0.1:25432/postgres
       username: postgres
       password:
       mapper-locations: classpath:/mapper/**/*.xml
